Asynchronous JavaScript demos uploaded

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 ~$press Advance Topics.docx
 original 2.zip
 original.zip
+~$UD Operations Using MongoDB.docx
+~$ynchronous Java Script.docx
+6.12- Exercise/
+6.7- Replacing Promises/
